<resources>
    <string name="app_name">Loja Virtual Android Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_app">Logo App</string>
    <string name="email_exemple">exemplo@email.com</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>

    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="cadastre_se_agora">Cadastre-se Agora!</string>
    <string name="loja"><b>Loja</b></string>
    <string name="virtual"><b>Virtual</b></string>
    <string name="esqueceu_a_senha">Esqueceu A Senha?</string>
    <string name="text_btn_cadastro_usuario">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="text_email_hint">E-Mail</string>
    <string name="password_exemple">********</string>
    <string name="email">E-mail</string>
    <string name="more">more</string>
    <string name="logout">Log out</string>
    <string name="perfil">Perfil</string>
    <string name="text_dialog_carregando">Carregando...</string>
    <string name="pedidos">Pedidos</string>
</resources>