<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/more"
        android:icon="@drawable/baseline_view_headline_24"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/perfil"
                android:contentDescription="@string/more"
                android:icon="@drawable/baseline_person_pin_24"
                android:title="@string/perfil"
                app:showAsAction="never"/>

            <item
                android:id="@+id/more"
                android:contentDescription="@string/more"
                android:icon="@drawable/baseline_checklist_rtl_24"
                android:title="@string/pedidos"
                app:showAsAction="never"/>
            <item
                android:id="@+id/logout"
                android:contentDescription="@string/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>